# messenger

./: .env.example  .gitignore  README.md  docker-compose.yml  technical-specifications-for-project-development.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_message_reactions.py  003_user_online_status.py  004_pinned_messages.py  005_fix_user_schema.py  006_fix_contacts_schema.py  007_fix_chats_schema.py
backend/src/: __init__.py  config.py  main.py
backend/src/api/: analytics.py  auth.py  bot.py  call.py  channel.py  chat.py  deps.py  device.py  encryption.py  export.py  health.py  invite.py  media.py  pin.py  profile.py  reaction.py  routes.py  search.py  smart_reply.py  sticker.py  subtitle.py  totp.py  transcription.py  translate.py  voice.py
backend/src/db/: __init__.py  base.py  session.py
backend/src/models/: __init__.py  call.py  chat.py  contact.py  encryption.py  media.py  pin.py  reaction.py  user.py
backend/src/schemas/: __init__.py  analytics.py  auth.py  bot.py  call.py  channel.py  chat.py  device.py  encryption.py  export.py  invite.py  media.py  mention.py  pin.py  profile.py  reaction.py  search.py  smart_reply.py  sticker.py  subtitle.py  totp.py  translate.py  voice.py
backend/src/services/: __init__.py  auth.py  call.py  encryption.py  media.py  mention.py  totp.py  transcription.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_call.py  test_chat.py  test_encryption.py  test_export.py  test_health.py  test_media.py  test_mention.py  test_pin.py  test_profile.py  test_reaction.py  test_search.py  test_sticker.py  test_totp.py  test_transcription.py  test_translate.py  test_voice.py  test_websocket.py
(+122 files in other folders)
